completed with the functionality of the e-commerce application

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Tienda El Baraton",
+  "name": "E-Commerce para la tienda el baraton",
   "icons": [
     {
       "src": "favicon.ico",
